--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -13,7 +13,7 @@ body {
     color: #333;
     
    
-    background-image: linear-gradient(to right, rgba(100, 20, 80, 0.8), rgba(180, 40, 100, 0.6)), url('/src/assets/imagens/fundo1.png');
+    background-image: linear-gradient(to right, rgba(100, 20, 80, 0.8), rgba(180, 40, 100, 0.6)), url('/src/assets/imagens/fundo1.svg');
     background-size: cover;
     background-position: center;
     
@@ -21,7 +21,7 @@ body {
     display: flex;
     align-items: center;
     min-height: 100vh;
-    padding: 20px;
+    padding: 5px;
     
     /* Isso esconde a barra de rolagem horizontal que seu layout cria */
     overflow-x: hidden;
@@ -57,7 +57,7 @@ body::before {
 .login-form h1 {
     font-family: 'Merriweather', serif;
     font-size: 32px;
-    color: #6a003c; 
+    color: #630527; 
     text-align: center;
     margin-bottom: 10px;
 }
@@ -115,7 +115,7 @@ body::before {
     display: block;
     text-align: right;
     font-size: 12px;
-    color: #b42864;
+    color: #810303;
     text-decoration: none;
     margin-top: 5px;
 }
@@ -141,9 +141,9 @@ body::before {
     flex: 1; 
     padding: 12px;
     border: none;
-    border-radius: 10px;
-    background-color: #fce8ef; 
-    color: #b42864;
+    border-radius: 30px;
+    background-color: #E6A5A5; 
+    color: #000000;
     font-weight: bold;
     cursor: pointer;
     font-size: 14px;
@@ -159,9 +159,9 @@ body::before {
     width: 100%;
     padding: 15px;
     border: none;
-    border-radius: 10px;
-    background-color: #e0acbc; /* Rosa mais forte */
-    color: #6a003c;
+    border-radius: 30px;
+    background-color: #E6A5A5; /* Rosa mais forte */
+    color: #000000;
     font-weight: bold;
     font-size: 16px;
     cursor: pointer;
@@ -181,7 +181,7 @@ body::before {
 }
 
 .link-cadastro a {
-    color: #b42864;
+    color: #630527;
     font-weight: bold;
     text-decoration: none;
 }
